<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvWeather"
            style="@style/ThemeCardView"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/cvMinMax"
            app:layout_constraintEnd_toStartOf="@+id/cvTemperature"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/ivWeather"
                    style="@style/ThemeWeatherImage"
                    android:contentDescription="@string/ic_snowflake"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvWeather"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_snowflake" />

                <TextView
                    android:id="@+id/tvWeather"
                    style="@style/ThemePrimaryText"
                    app:layout_constraintBottom_toTopOf="@+id/tvWeatherDescription"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivWeather"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Weather" />

                <TextView
                    android:id="@+id/tvWeatherDescription"
                    style="@style/ThemeSecondaryText"
                    android:layout_width="0dp"
                    android:maxLines="2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tvWeather"
                    app:layout_constraintTop_toBottomOf="@+id/tvWeather"
                    tools:text="condition" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvTemperature"
            style="@style/ThemeCardView"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/cvWind"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cvWeather"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/ivTemperature"
                    style="@style/ThemeWeatherImage"
                    android:contentDescription="@string/ic_humidity"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvTemperature"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_humidity" />

                <TextView
                    android:id="@+id/tvTemperature"
                    style="@style/ThemePrimaryText"
                    app:layout_constraintBottom_toTopOf="@+id/tvHumidity"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivTemperature"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Degree" />

                <TextView
                    android:id="@+id/tvHumidity"
                    style="@style/ThemeSecondaryText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivTemperature"
                    app:layout_constraintTop_toBottomOf="@+id/tvTemperature"
                    tools:text="per cent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvMinMax"
            style="@style/ThemeCardView"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/cvMoreInfo"
            app:layout_constraintEnd_toStartOf="@+id/cvWind"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvWeather">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/ivMinMax"
                    style="@style/ThemeWeatherImage"
                    android:contentDescription="@string/ic_temperature"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvMin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_temperature" />

                <TextView
                    android:id="@+id/tvMin"
                    style="@style/ThemePrimaryText"
                    app:layout_constraintBottom_toTopOf="@+id/tvMax"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivMinMax"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Minimum" />

                <TextView
                    android:id="@+id/tvMax"
                    style="@style/ThemeSecondaryText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivMinMax"
                    app:layout_constraintTop_toBottomOf="@+id/tvMin"
                    tools:text="Maximum" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvWind"
            style="@style/ThemeCardView"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/cvMoreInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cvMinMax"
            app:layout_constraintTop_toBottomOf="@+id/cvTemperature">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/ivWind"
                    style="@style/ThemeWeatherImage"
                    android:contentDescription="@string/ic_wind"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvWindSpeedPerHour"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_wind" />

                <TextView
                    android:id="@+id/tvWindSpeed"
                    style="@style/ThemePrimaryText"
                    app:layout_constraintBottom_toTopOf="@+id/tvWindSpeedPerHour"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivWind"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Wind" />

                <TextView
                    android:id="@+id/tvWindSpeedPerHour"
                    style="@style/ThemeSecondaryText"
                    android:text="@string/weather_miles_per_hour"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivWind"
                    app:layout_constraintTop_toBottomOf="@+id/tvWindSpeed" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvMoreInfo"
            style="@style/ThemeCardView"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvMinMax">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/ivLocation"
                    style="@style/ThemeWeatherImage"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/ic_location"
                    app:layout_constraintBottom_toTopOf="@+id/vLine"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_location" />

                <TextView
                    android:id="@+id/tvLocationName"
                    style="@style/ThemePrimaryText"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/primaryTextColor"
                    app:layout_constraintBottom_toTopOf="@+id/tvLocationCountry"
                    app:layout_constraintStart_toEndOf="@+id/ivLocation"
                    app:layout_constraintTop_toTopOf="@+id/ivLocation"
                    tools:text="Name" />

                <TextView
                    android:id="@+id/tvLocationCountry"
                    style="@style/ThemeSecondaryText"
                    android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/ivLocation"
                    app:layout_constraintStart_toEndOf="@+id/ivLocation"
                    app:layout_constraintTop_toBottomOf="@+id/tvLocationName"
                    tools:text="Country" />

                <View
                    android:id="@+id/vLine"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="16dp"
                    android:background="@color/dividerBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivLocation" />

                <ImageView
                    android:id="@+id/ivSunrise"
                    style="@style/ThemeWeatherImage"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/ic_sunrise"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvSunriseLabel"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/vLine"
                    app:srcCompat="@drawable/ic_sunrise" />

                <TextView
                    android:id="@+id/tvSunriseLabel"
                    style="@style/ThemePrimaryText"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/ic_sunrise"
                    app:layout_constraintBottom_toTopOf="@+id/tvSunriseTime"
                    app:layout_constraintEnd_toStartOf="@+id/ivSunset"
                    app:layout_constraintHorizontal_bias="0.4"
                    app:layout_constraintStart_toEndOf="@+id/ivSunrise"
                    app:layout_constraintTop_toBottomOf="@+id/vLine"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/tvSunriseTime"
                    style="@style/ThemeSecondaryText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/tvSunriseLabel"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="@+id/tvSunriseLabel"
                    app:layout_constraintTop_toBottomOf="@+id/tvSunriseLabel"
                    tools:layout_editor_absoluteX="83dp"
                    tools:text="Sunrise" />

                <ImageView
                    android:id="@+id/ivSunset"
                    style="@style/ThemeWeatherImage"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/ic_sunset"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvSunsetLabel"
                    app:layout_constraintStart_toEndOf="@+id/tvSunriseLabel"
                    app:layout_constraintTop_toBottomOf="@+id/vLine"
                    app:srcCompat="@drawable/ic_sunset" />

                <TextView
                    android:id="@+id/tvSunsetLabel"
                    style="@style/ThemePrimaryText"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/ic_sunset"
                    app:layout_constraintBottom_toTopOf="@+id/tvSunsetTime"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivSunset"
                    app:layout_constraintTop_toBottomOf="@+id/vLine"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/tvSunsetTime"
                    style="@style/ThemeSecondaryText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/tvSunsetLabel"
                    app:layout_constraintStart_toStartOf="@+id/tvSunsetLabel"
                    app:layout_constraintTop_toBottomOf="@+id/tvSunsetLabel"
                    tools:layout_editor_absoluteX="320dp"
                    tools:text="Sunset" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>